--- a/dusk/templates/story.html
+++ b/dusk/templates/story.html
@@ -2,14 +2,14 @@
 
 {% block content %}
     <div class="bg-light p-5 rounded-lg m-3">
-        <h1>{{title}}</h1>
-        <h2>Written By: {{story.author.username}}</h2>
-        <h3>Published: {{story.date.strftime('%B %d, %Y')}}</h3>
-        <p>{{story.text}}</p>
+        <h1>{{post.title}}</h1>
+        <h2>Written By: {{post.author.username}}</h2>
+        <h3>Published: {{post.date.strftime('%B %d, %Y')}}</h3>
+        <p>{{post.text}}</p>
 
-        {% if story.author == current_user %}
+        {% if post.author == current_user %}
         <div>
-            <a href="{{url_for('storys.update',story_id=story.id)}}">Update</a>
+            <a href="{{url_for('storys.update',story_id=post.id)}}">Update</a>
             <button type="button" class="btn btn-danger" data-toggle='modal' data-target='#del_modal'>Delete</button>
         </div>
         {% endif %}
@@ -27,7 +27,7 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-              <form action="{{'url_for(story.delete_story',story_id=story.id)}}"method="post">
+              <form method="post" action="{{url_for('storys.delete_story',story_id=post.id)}}">
                   <input class="btn btn-danger" type="submit" value="Delete">
               </form>
               <button type="button" class="btn btn-primary">Delete</button>
