--- a/dusk/templates/user_stories.html
+++ b/dusk/templates/user_stories.html
@@ -9,9 +9,9 @@
 
 
 
-{% for post in story.items %}
-    <h2> <a href="{{url_for('stories.story', story_id=story.id)}}">{{post.title}}</a></h2>
-    Written By: <a href="{{url_for('users.user_post',username=post.author.username)}}">{{post.author}}</a>
+{% for post in stories.items %}
+    <h2> <a href="{{url_for('storys.story', story_id=post.id)}}">{{post.title}}</a></h2>
+    Written By: <a href="{{url_for('users.user_posts',username=post.author.username)}}">{{post.author}}</a>
     <p class="text-muted">Published on: {{post.date.strftime("%Y-%m-%d")}}</p>
     <br>
     <p>{{post.text}}</p>
@@ -23,15 +23,15 @@
 <nav aria-label='Page Navigation example'>
     <ul class="pagination justify-content-center">
         
-        {% for page_num in story.iter_pages(left_edge=1,right_edge=1,left_current=1,right_current=2) %}
+        {% for page_num in stories.iter_pages(left_edge=1,right_edge=1,left_current=1,right_current=2) %}
             
-            {% if story.page == page_num %}
+            {% if stories.page == page_num %}
             <li class='page-item disabled'>
-                <a class="page-link" href="{{url_for('user.user_post',username=user.username,page=page_num)}}">{{page_num}}</a>
+                <a class="page-link" href="{{url_for('users.user_posts',username=user.username,page=page_num)}}">{{page_num}}</a>
             </li>
             {% else %}
             <li class='page-item'>
-                <a class="page-link" href="{{url_for('user.user_post',username=user.username,page=page_num)}}">{{page_num}}</a>
+                <a class="page-link" href="{{url_for('users.user_posts',username=user.username,page=page_num)}}">{{page_num}}</a>
             </li>
                 
             {% endif %}    
