--- a/dusk/templates/base.html
+++ b/dusk/templates/base.html
@@ -8,36 +8,40 @@
 </head>
 
 <body>
-    <ul class="nav">
-        <li class="nav-link">
-            <a href="{{url_for('core.index')}}">Home</a>
-        </li>
-        <li class="nav-link">
-            <a href="{{url_for('core.info')}}">About</a>
-        </li>
+    <nav class="navbar-expand-lg navbar-light bg-light">
+        <ul class="nav justify-content-end">
+            <!--<li class="nav-link">
+                <a href="{{url_for('core.index')}}">Home</a>
+            </li>
+            <li class="nav-link">
+                <a href="{{url_for('core.info')}}">About</a>
+            </li> -->
 
-        
-        {% if current_user.is_authenticated %}   
-        <li class="nav-link">
-            <a href="{{url_for('users.account')}}">Account</a>
-        </li>
-        <li class="nav-link">
-            <a href="{{url_for('storys.create_story')}}">Write</a>
-        </li>
-        <li class="nav-link">
-            <a href="{{url_for('users.logout')}}">Logout</a>
-        </li>     
-        {% else %}       
-        <li class="nav-link">
-            <a href="{{url_for('users.login')}}">Login</a>
-        </li>
-        <li class="nav-link">
-            <a href="{{url_for('users.register')}}">Register</a>
-        </li>
-       {% endif %}
-        
-    </ul>
-    
+            
+            {% if current_user.is_authenticated %}   
+            <li class="nav-link">
+                <a href="{{url_for('core.dashboard')}}">Home</a>
+            </li>
+            <li class="nav-link">
+                <a href="{{url_for('users.account')}}">Account</a>
+            </li>
+            <li class="nav-link">
+                <a href="{{url_for('storys.create_story')}}">Write</a>
+            </li>
+            <li class="nav-link">
+                <a href="{{url_for('users.logout')}}">Logout</a>
+            </li>     
+            {% else %}       
+            <li class="nav-link">
+                <a href="{{url_for('users.login')}}">Login</a>
+            </li>
+            <!-- <li class="nav-link">
+                <a href="{{url_for('users.register')}}">Register</a>
+            </li> -->
+        {% endif %}
+            
+        </ul>
+    </nav>
     <div class="container">
         <br>
     {% block content %}
