--- a/dusk/templates/index.html
+++ b/dusk/templates/index.html
@@ -3,43 +3,26 @@
 
 {% block content %}
     <div class="bg-light p-5 rounded-lg m-3">
-        <h1>Welcome to DUSK</h1>
+        <div class="jumbotron">
+            <h1 class="display-4">Welcome to DUSK</h1>
+            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+            <hr class="my-4">
+            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+            <p class="lead">
+              <a class="btn btn-primary btn-lg" href="{{url_for('users.register')}}" role="button">Register Now</a>
+            </p>
+          </div>
     </div> 
-    <div class="container">
-        
-        {% for post in story.items %}
-        <div class="card">
-            <div class="card-body">
-                <h2><a class="card-title" href="{{url_for('storys.story',story_id=story.id)}}">{{story.title}}</a> </h2>
-                <a href="{{url_for('users.user_post', username=post.author.username)}}">Written By: {{ story.author.username}}</a>
-                <p>Published on: {{post.date.strftime('%Y-%m-%d')}}</p>
-                <a class='btn btn-primary'href="{{url_for('storys.story',story_id=story.id)}}">Read Story</a>
-            </div>
-
-        </div>
-            
-        {% endfor %}
+    
     
 
-    </div>
-    <nav aria-label='Page Navigation example'>
-        <ul class="pagination justify-content-center">
-            
-            {% for page_num in storys.iter_pages(left_edge=1,right_edge=1,left_current=1,right_current=2) %}
-                
-                {% if story.page == page_num %}
-                <li class='page-item disabled'>
-                    <a class="page-link" href="{{url_for('core.index',page=page_num)}}">{{page_num}}</a>
-                </li>
-                {% else %}
-                <li class='page-item'>
-                    <a class="page-link" href="{{url_for('core.index',page=page_num)}}">{{page_num}}</a>
-                </li>
-                    
-                {% endif %}    
-            {% endfor %}  
-        </ul>
-    </nav>
+   <!--- <div class="card text-end" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">New to Dusk</h5>
+          <p class="card-text">Sign Up for a new writing experience where authors are more that a back page bio!</p>
+          <a href="#" class="btn btn-primary">Register Here</a>
+        </div>
+      </div> --->
 
 
 {% endblock %}
